fix text overflow in list expanded

--- a/frontend/less/espo/custom.less
+++ b/frontend/less/espo/custom.less
@@ -498,7 +498,7 @@ table.no-margin {
 
 .expanded-row {
     white-space: nowrap;
-    text-overflow: ellipsis;
+
     overflow: hidden;
 }
 
